# solang

./: .gitignore  NEWS  README  configure.ac
data/: Makefile.am  gschemas.compiled  org.gnome.solang.gschema.xml  solang-browser-renderer.ui  solang-enlarged-renderer.ui  solang-tag-manager.ui  solang.gschema.xml  solang.ui
data/icons/16x16/: Makefile.am
data/icons/22x22/: Makefile.am
data/icons/24x24/: Makefile.am
data/icons/32x32/: Makefile.am
data/icons/48x48/: Makefile.am
data/icons/scalable/: Makefile.am
help/: Makefile.am
help/C/: export_CD.page  export_folder.page  export_queue.page  histogram.page  howto_search.page  index.page  keys.page  layout.page  photos_by_page.page  tags_manage.page
help/cs/: cs.po
help/da/: da.po
help/de/: de.po
help/es/: es.po
help/fr/: fr.po
help/sl/: sl.po
help/uk/: uk.po
po/: LINGUAS  POTFILES.in  POTFILES.skip  cs.po  da.po  de.po  eo.po  es.po  fr.po  gl.po  he.po  hu.po  ja.po  lt.po  nb.po  pl.po  pt_BR.po  ro.po  ru.po  sl.po  sr.po  sr@latin.po  sv.po  te.po  uk.po  zh_CN.po
src/: Makefile.am  build-flags.mk
src/application/: Makefile.am  application.cpp  application.h  deletion-queue.cpp  engine.cpp  engine.h  main-window.cpp  main-window.h  main.cpp
src/attribute/: Makefile.am  date-manager.cpp  free-text.cpp  modification-date.cpp  property-manager.cpp  search-basket.cpp  search-criterion-source.h  search-manager.cpp  tag-key-manager.cpp  tag-key-manager.h  tag-manager.cpp  tag-manager.h  tag-new-dialog.cpp  tag-new-dialog.h  tag.cpp
src/common/: Makefile.am  archive-maker.cpp  archive-maker.h  content-type-repo.h  database.cpp  database.h  db-object.h  exif-data-key.cpp  export-queue-operations.cpp  finally.cpp  finally.h  hig-dialog.cpp  hig-dialog.h  i-operation.h  i-photo-destination.h  i-photo-search-criteria.h  i-photo-source.h  i-plugin.h  i-progress-observer.cpp  i-progress-observer.h  i-renderer-selector.h  i-renderer.h  i-storage.h  non-copyable.h  operation.cpp  photo-factory.cpp  photo-factory.h  photo.cpp  photo.h  progress-dialog.cpp  progress-observer.h  progress-widget.cpp  progress-widget.h  thumbnailer.cpp  thumbnailer.h  tracker-client.h  types.h
src/editor/: Makefile.am  editable-photo.cpp  editable-photo.h  editor.cpp
src/exporter/: Makefile.am  brasero-destination.cpp  brasero-destination.h  directory-destination.cpp  directory-destination.h  exporter-dialog.cpp  exporter-dialog.h  exporter.cpp  exporter.h
src/importer/: Makefile.am  camera-source.cpp  flickr-source.cpp  importer.cpp
src/renderer/: Makefile.am  browser-renderer.cpp  browser-renderer.h  cell-renderer-thumbnail.cpp  cell-renderer-thumbnail.h  enlarged-renderer.cpp  enlarged-renderer.h  slideshow-renderer.cpp  slideshow-renderer.h  slideshow-window.cpp  slideshow-window.h  thumbnail-view.cpp  thumbnail-view.h
