include $(top_srcdir)/gnome-doc-utils.make

DOC_ID = @PACKAGE_TARNAME@
DOC_INCLUDES = legal.xml
DOC_FIGURES = \
	figures/main-window.png \
	figures/properties-title.png

DOC_PAGES = \
	export_CD.page \
	export_folder.page \
	import.page \
	index.page \
	intro.page \
	howto_search.page \
	keys.page \
	layout.page \
	photos_by_page.page \
	tags_intro.page \
	tags_manage.page \
	tags_use.page

DOC_LINGUAS = cs da de es fr sl uk

dist-hook: doc-dist-hook
