noinst_LTLIBRARIES =	libeditor.la

libeditor_la_SOURCES = \
	buffer-maker.cpp \
	buffer-maker.h \
	buffer-pixbuf-converter.cpp \
	buffer-pixbuf-converter.h \
	editable-photo.cpp \
	editable-photo.h \
	editor.cpp \
	editor.h \
	flip-horiz-operation.cpp \
	flip-horiz-operation.h \
	flip-operation.cpp \
	flip-operation.h \
	flip-vert-operation.cpp \
	flip-vert-operation.h \
	rotate-clock-operation.cpp \
	rotate-clock-operation.h \
	rotate-counter-operation.cpp \
	rotate-counter-operation.h \
	rotate-operation.cpp \
	rotate-operation.h

include $(top_srcdir)/src/build-flags.mk
