noinst_LTLIBRARIES =	libimporter.la

libimporter_la_SOURCES = \
	camera-import-widget.cpp \
	camera-import-widget.h \
	camera-source.cpp \
	camera-source.h \
	directory-source.cpp \
	directory-source.h \
	flickr-auth-dialog.cpp \
	flickr-auth-dialog.h \
	flickr-chooser-button.cpp \
	flickr-chooser-button.h \
	flickr-chooser-dialog.cpp \
	flickr-chooser-dialog.h \
	flickr-enums.h \
	flickr-photo-uri-builder.cpp \
	flickr-photo-uri-builder.h \
	flickr-source.cpp \
	flickr-source.h \
	gp-context.cpp \
	gp-context.h \
	importer.cpp \
	importer-dialog.cpp \
	importer-dialog.h \
	importer.h \
	photo-source.cpp \
	photo-source.h \
	photo-source-enums.h

include $(top_srcdir)/src/build-flags.mk
