noinst_LTLIBRARIES =	librenderer.la

librenderer_la_SOURCES = \
	browser-renderer.cpp \
	browser-renderer.h \
	enlarged-renderer.cpp \
	enlarged-renderer.h \
	browser-model-column-record.cpp \
	browser-model-column-record.h \
	cell-renderer-thumbnail.cpp \
	cell-renderer-thumbnail.h \
	pagination-bar.cpp \
	pagination-bar.h \
	slideshow-renderer.cpp \
	slideshow-renderer.h \
	slideshow-window.cpp \
	slideshow-window.h \
	thumbnail-view.h \
	thumbnail-view.cpp

include $(top_srcdir)/src/build-flags.mk
