size = 16x16

actioniconsdir = $(pkgdatadir)/icons/hicolor/$(size)/actions
dist_actionicons_DATA = \
	actions/slideshow-play.png

appiconsdir = $(datadir)/icons/hicolor/$(size)/apps
dist_appicons_DATA = \
	apps/solang.png

statusiconsdir = $(pkgdatadir)/icons/hicolor/$(size)/status
dist_statusicons_DATA = \
	status/conduit-source.png
